@@ -1,5 +1,6 @@
 = EDGE
 * Regression: column config for GridPanel again accepts a renderer along with its parameters (as array, where the first element is the renderers name, the second - the parameters passed to the renderer, e.g.: :renderer => ["date", "y-m-d"])
+* Fix: Window resize/move now works correctly
 
 = v0.5.6
 * Compatibility with latest netzke-core
